--- a/sass/_navigation.scss
+++ b/sass/_navigation.scss
@@ -1,14 +1,21 @@
 ul.menu {
 	margin: 0;
 	padding: 0;
+	display: flex;
+	flex-wrap: wrap;
+	justify-content: center;
+	align-items: center;
 	li {
 		display: inline;
 		margin-right: 10px;
 		a {
-			color: #333;
-			padding: 10px;
-			background: #333;
-			color: white;
+			// color: #333;
+			// padding: 10px;
+			// background: #333;
+			color: #2b2b2b;
+		    padding: 0px 30px;
+		    font-size:  14px;
+		    text-transform: uppercase;
 		}
 	}
 }
